# mirabel

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  MIGRATION.md  MIGRATION.step1.md  README.md  compose.yml  flake.nix
.github/: copilot-instructions.md
backend/: AGENTS.md  Cargo.toml  diesel.toml
backend-derive/: Cargo.toml
backend-derive/src/: lib.rs
backend/migrations/2025-07-06-141151_create_user_basics/: down.sql  up.sql
backend/migrations/2025-07-06-152107_user_datetime_with_tz/: down.sql  up.sql
backend/migrations/2025-07-06-154655_create_deleted_users_table/: down.sql  up.sql
backend/migrations/2025-07-06-210335_create_workspace_table/: down.sql
backend/migrations/2025-07-06-210648_create_workspace_members/: down.sql  up.sql
backend/migrations/2025-07-07-121509_rename_workspaces/: down.sql
backend/migrations/2025-07-08-082607_create_timeline_entries_table/: down.sql
backend/migrations/2025-07-08-112436_add_content_type_to_timeline_entry/: down.sql  up.sql
backend/migrations/2025-07-19-225303_add_jobs_and_prompt_evaluations/: up.sql
backend/src/: db.rs  error.rs  main.rs  schema.rs
backend/src/agent/: APPROACHES.md  mod.rs  title_generation.rs
backend/src/driver/: id.rs  mod.rs
backend/src/driver/browser/: mod.rs
backend/src/driver/converter/: html.rs  mod.rs  pdf.rs
backend/src/driver/llm/: mod.rs
backend/src/driver/llm/ollama/: mod.rs  models.rs
backend/src/driver/scraper/: mod.rs
backend/src/driver/search/: mod.rs  models.rs  searxng.rs  traits.rs
backend/src/dto/: api_response.rs  avatar.rs  error_response.rs  frontend_user.rs  login_user.rs  mod.rs  page.rs  register_user.rs  token.rs  updated_session.rs  updated_user.rs  workspace.rs
backend/src/dto/session/: event.rs  mod.rs
backend/src/handler/: api.rs  extractors.rs  mod.rs
backend/src/handler/api/: mod.rs
backend/src/handler/api/v1/: auth.rs  me.rs  mod.rs  sessions.rs  users.rs  workspaces.rs
backend/src/handler/api/v1/me/: user_workspaces.rs
backend/src/handler/middleware/: auth_middleware.rs
backend/src/model/: avatar.rs  chat.rs  job.rs  mod.rs  plan.rs  prompts.rs  session.rs  timeline.rs  user.rs  user2.rs  workspace.rs
backend/src/repository/: avatars.rs  mod.rs  sessions.rs  surrealdb.rs  traits.rs  users.rs  workspaces.rs
backend/src/repository/surrealdb/: avatars.rs  builder.rs  mod.rs  models.rs  repository.rs  sessions.rs  users.rs  workspaces.rs
backend/src/repository/v2/: mod.rs
backend/src/repository/v2/surrealdb/: builder.rs  mod.rs  models.rs  relationships.rs  repository.rs
backend/src/security/: jwt_util.rs  mod.rs
backend/src/service/: auth.rs  mod.rs  security.rs  sessions.rs  users.rs  workspaces.rs
backend/src/session/: mod.rs  models.rs
bruno/Mirabel/: bruno.json
bruno/Mirabel/Api/: Hello World.bru
bruno/Mirabel/Api/Auth/: Login.bru  Logout.bru  Refresh.bru  Register.bru
bruno/Mirabel/Api/User/: Delete.bru  Me.bru  Patch.bru
bruno/Mirabel/Api/Workspaces/: Workspaces.bru
config/prompts/: convert-bad-to-good.md  good-vs-bad.txt
frontend/: components.json  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: request.ts  session-state.svelte.ts  socket.svelte.ts  socket.ts  store.ts  time.ts  utils.ts
frontend/src/lib/api/: chat.ts  project.ts  session.ts  user.ts  workspace.ts
frontend/src/lib/auth/: api.ts  index.ts  schemas.ts  store.svelte.ts  tokens.ts
frontend/src/models/: result.ts  user.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
llm-gateway/: Cargo.toml  README.md
llm-gateway/src/: client.rs  error.rs  lib.rs  traits.rs  types.rs
llm-gateway/src/cost/: types.rs
llm-gateway/src/providers/: ollama.rs
migrations/2025-07-06-141151_create_user_basics/: down.sql  up.sql
migrations/2025-07-06-210335_create_workspace_table/: up.sql
migrations/2025-07-07-121509_rename_workspaces/: up.sql
migrations/2025-07-08-082607_create_timeline_entries_table/: up.sql
migrations/2025-07-19-225303_add_jobs_and_prompt_evaluations/: down.sql
mirabel-backend/: AGENTS.md  Cargo.toml  diesel.toml
mirabel-backend-derive/: Cargo.toml
mirabel-backend/src/: db.rs  error.rs  main.rs
mirabel-backend/src/agent/: mod.rs
mirabel-backend/src/driver/: mod.rs
mirabel-backend/src/driver/browser/: mod.rs
mirabel-backend/src/driver/converter/: html.rs  markdown.rs  pdf.rs
mirabel-backend/src/driver/llm/: mod.rs
mirabel-backend/src/driver/scraper/: mod.rs
mirabel-backend/src/driver/search/: models.rs  searxng.rs
mirabel-backend/src/handler/: extractors.rs  mod.rs
mirabel-backend/src/handler/api/: mod.rs
mirabel-backend/src/handler/api/v1/: auth.rs  me.rs  sessions.rs  users.rs  workspaces.rs
mirabel-backend/src/handler/api/v1/me/: user_workspaces.rs
mirabel-backend/src/handler/middleware/: auth_middleware.rs
mirabel-backend/src/security/: jwt_util.rs
mirabel-backend/src/service/: auth.rs  mod.rs  sessions.rs  users.rs  workspaces.rs
mirabel-backend/src/session/: mod.rs  models.rs
mirabel-core/: Cargo.toml
mirabel-core/src/: error.rs  lib.rs  schema.rs
mirabel-core/src/dto/: api_response.rs  avatar.rs  frontend_user.rs  login_user.rs  mod.rs  register_user.rs  token.rs  updated_session.rs  workspace.rs
mirabel-core/src/dto/session/: mod.rs
mirabel-core/src/models/: job.rs  mod.rs  prompts.rs  session.rs  timeline.rs  user.rs  workspace.rs
mirabel-core/src/utils/: id.rs
mirabel-tui/: Cargo.toml  README.md
mirabel-web/: llms.txt  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
mirabel-web/src/: app.html
mirabel-web/src/lib/: request.ts  session-state.svelte.ts  socket.svelte.ts  utils.ts
mirabel-web/src/routes/: +layout.ts  +page.svelte
scratchspace/: eval_prompt.py  prompting.md
scratchspace/sentiment/: template.jinja
scratchspace/sentiment/inputs/: negative.json  neutral.json  positive.json
scratchspace/write-function/: template.jinja
surrealdb/: .surrealdb.example
(+149 files in other folders)
