[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
miette = { version = "7.5.0", features = ["fancy", "serde"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
schemars = { version = "0.8.21", features = ["impl_json_schema"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.95"
serial_test = "3.2.0"
