[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.9.0", features = ["openssl", "secure-cookies"] }
chrono = { version = "0.4.39", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = { git = "https://github.com/allan2/dotenvy", features=['macros'] }
eyre = "0.6.12"
futures = "0.3.31"
miette = { version = "7.5.0", features = ["fancy", "serde"] }
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
reqwest-streams = { version = "0.9.0", features = ["json"] }
schemars = { version = "0.8.21", features = ["impl_json_schema"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = { version = "3.12.0", features = ["base64", "chrono", "json"] }
surrealdb = "2.2.0"
surrealdb-migrations = "2.2.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.95"
serial_test = "3.2.0"
